--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
         "fb_url": "https://www.facebook.com",
         "gh_url": "https://github.com/Devbijwe",
         "gmail_user": "22devendrabijwe@gmail.com",
-        "gmail_pswd": "lyjmgtiewkytgwyo",
+        "gmail_pswd": "your pass",
         "admin_username": "12345",
         "admin_password": "12345"
     },
